backend/src/tests/fixtures/photos/negative/photoRegex.fixture.ts
export default {
  details: {
    imageFile: 'testfile.ooo',
    originalImageName: 'originaltestfile.hhh',
    storeLink: 'http://www.futos',
  },
  equipment: {
    cameraIso: 'string',
    lensAperture: 'a/1.2',
    lensFocalLength: '100nn',
    lensShutterSpeed: '1.200',
  },
};
